--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Solve the puzzle to get the prize.
+Solve the puzzle to get the password for:
+
+
+
+
+![alt text](https://github.com/byonbyoff/SurPrize/blob/main/Password.png?raw=true)
+
+
+..- ... .     .-. --- - .---- ...--     --- -.     - .... .     .--. .- ... ... .-- --- .-. -..     - ---     --. . -     --.. .. .--.     .--. .- ... ... .-- --- .-. -..
